feat: add sub-command shortcuts for common admin actions
New shortcuts (no GUI needed):
  /ap                 → Opens GUI
  /ap unbreakable     → Toggle unbreakable on held item
  /ap unbreakable all → Make ALL items unbreakable
  /ap repair          → Repair held item to full durability
  /ap ench <name> <lvl> → Quick enchant (fuzzy name match)
  /ap name <name>     → Rename held item (supports &-colors)
  /ap gm <mode>       → Change gamemode
  /ap heal [player]   → Heal + feed player
  /ap feed [player]   → Feed player
  /ap fly             → Toggle flight
  /ap speed <level>   → Set walk speed (0.1-10)
  /ap clear           → Clear entire inventory
  /ap god             → Toggle god mode (no damage + full feed)
  /ap tp <player>     → Teleport to player
  /ap head <player>   → Get player head item
  /ap anvil           → Open anvil

Tab-complete for all sub-commands and arguments.
God mode tracks players across sessions with UUID set.